@@ -20,7 +20,7 @@
 use warnings;
 use strict;
 
-use Test::More tests => 13;
+use Test::More tests => 37;
 use Test::Exception;
 use Test::Deep;
 
@@ -39,69 +39,58 @@ isa_ok($webAdminMod, 'EBox::WebAdmin');
 
 my @resourceNames = ('foo/a', 'bar/a', 'foo/b');
 
-# FIXME: WE MUST PORT THIS TO NGINX!!
-#is ($webAdminMod->_restrictedResourceExists($resourceNames[0]), 0, 'Resource not exists before adding');
-#
-#lives_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[0], [ '192.168.45.2/32', '10.0.0.0/24' ], 'file');
-#} 'Adding a correct restricted file';
-#
-#lives_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[0], [ '192.168.1.4/32' ], 'file');
-#} 'Updating a correct restricted file';
-#
-#lives_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[1], [ 'all', '102.1.2.3/32' ], 'location');
-#} 'Adding an all allow restricted location';
-#
-#is ($webAdminMod->_restrictedResourceExists($resourceNames[0]), 1, 'Resource exists after adding');
-#
-#throws_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[2]);
-#} 'EBox::Exceptions::MissingArgument', 'Missing a compulsory argument';
-#
-#throws_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[2], [ 'nobody' ]);
-#} 'EBox::Exceptions::MissingArgument', 'Missing a compulsory argument';
-#
-#throws_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[2], [], 'file');
-#} 'EBox::Exceptions::Internal', 'No given IP address';
-#
-#throws_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[2], [ 'foobar', '10.0.0.2/24'], 'location');
-#} 'EBox::Exceptions::Internal', 'Deviant IP address';
-#
-#throws_ok {
-#    $webAdminMod->setRestrictedResource($resourceNames[2], ['all'], 'foobar');
-#} 'EBox::Exceptions::InvalidType', 'Invalid resource type';
-#
-#cmp_deeply($webAdminMod->get_list('restricted_resources'),
-#           [ { allowedIPs => [ '192.168.1.4/32' ],
-#               name       => $resourceNames[0],
-#               type       => 'file',
-#             },
-#             { allowedIPs => ['all'],
-#               name       => $resourceNames[1],
-#               type       => 'location',
-#             }],
-#            'The additions and updates were done correctly');
-#
-#throws_ok {
-#    $webAdminMod->delRestrictedResource();
-#} 'EBox::Exceptions::MissingArgument', 'Missing a compulsory argument';
-#
-#lives_ok {
-#    foreach my $resourceName (@resourceNames[0 .. 1]) {
-#        $webAdminMod->delRestrictedResource($resourceName);
-#    }
-#} 'Deleting correct restricted resources';
-#
-#is ($webAdminMod->_restrictedResourceExists($resourceNames[1]), 0, 'Resource not exists after deleting');
-#
-#throws_ok {
-#    $webAdminMod->delRestrictedResource($resourceNames[2]);
-#} 'EBox::Exceptions::DataNotFound', 'Given resource name not found';
+is ($webAdminMod->_restrictedResourceExists($resourceNames[0]), 0, 'Resource not exists before adding');
+
+lives_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[0], [ '192.168.45.2/32', '10.0.0.0/24' ]);
+} 'Adding a correct restricted resource';
+
+lives_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[0], [ '192.168.1.4/32' ]);
+} 'Updating a correct restricted file';
+
+lives_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[1], [ 'all', '102.1.2.3/32' ]);
+} 'Adding an all allow restricted location';
+
+is ($webAdminMod->_restrictedResourceExists($resourceNames[0]), 1, 'Resource exists after adding');
+
+throws_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[2]);
+} 'EBox::Exceptions::MissingArgument', 'Missing a compulsory argument';
+
+throws_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[2], []);
+} 'EBox::Exceptions::Internal', 'No given IP address';
+
+throws_ok {
+    $webAdminMod->setRestrictedResource($resourceNames[2], [ 'foobar', '10.0.0.2/24']);
+} 'EBox::Exceptions::Internal', 'Deviant IP address';
+
+cmp_deeply($webAdminMod->get_list('restricted_resources'),
+           [ { allowedIPs => [ '192.168.1.4/32' ],
+               name       => $resourceNames[0],
+             },
+             { allowedIPs => ['all'],
+               name       => $resourceNames[1],
+             }],
+            'The additions and updates were done correctly');
+
+throws_ok {
+    $webAdminMod->delRestrictedResource();
+} 'EBox::Exceptions::MissingArgument', 'Missing a compulsory argument';
+
+lives_ok {
+    foreach my $resourceName (@resourceNames[0 .. 1]) {
+        $webAdminMod->delRestrictedResource($resourceName);
+    }
+} 'Deleting correct restricted resources';
+
+is ($webAdminMod->_restrictedResourceExists($resourceNames[1]), 0, 'Resource not exists after deleting');
+
+throws_ok {
+    $webAdminMod->delRestrictedResource($resourceNames[2]);
+} 'EBox::Exceptions::DataNotFound', 'Given resource name not found';
 
 # Include related tests
 my @includes = ( '/bin/true', '/bin/false' );
@@ -147,4 +136,43 @@ lives_ok {
 cmp_ok(@{$webAdminMod->_nginxIncludes()}, '==', 0,
        'Nothing has been left');
 
+# Nginx server includes.
+throws_ok {
+    $webAdminMod->addNginxServer();
+} 'EBox::Exceptions::MissingArgument', 'No server file to include';
+
+throws_ok {
+    $webAdminMod->addNginxServer($deviantIncludes[0]);
+} 'EBox::Exceptions::Internal', 'Server file to include does not exits';
+
+lives_ok {
+    $webAdminMod->addNginxServer($_) foreach (@includes);
+} 'Adding some server includes';
+
+cmp_deeply($webAdminMod->_nginxServers(), \@includes,
+       'The two server includes are added');
+
+lives_ok {
+    $webAdminMod->addNginxServer($_) foreach (@includes);
+} 'Trying to add the same again';
+
+cmp_deeply($webAdminMod->_nginxServers(), \@includes,
+           'Only the two server includes are there');
+
+throws_ok {
+    $webAdminMod->removeNginxServer();
+} 'EBox::Exceptions::MissingArgument', 'No server file to exclude';
+
+lives_ok {
+    $webAdminMod->removeNginxServer($deviantIncludes[0]);
+} 'Trying to remove a no-included server file does not trigger error';
+cmp_deeply($webAdminMod->_nginxServers(), \@includes,
+           'After the removal of a no-included server file nothing is affected');
+
+lives_ok {
+    $webAdminMod->removeNginxServer($_) foreach (@includes);
+} 'Removing all the include server files';
+
+cmp_ok(@{$webAdminMod->_nginxServers()}, '==', 0,
+       'Nothing has been left');
 1;
